// Vitest Snapshot v1

exports[`CheckBox > renders correctly when checked 1`] = `
"<div class=\\"flex p-0 gap-3 items-top\\">
  <div class=\\"shadow-sm w-5 h-5 rounded border flex justify-center items-center mt-[3px] border-slate-900\\"><input type=\\"checkbox\\" class=\\"opacity-0 absolute\\"><svg class=\\"w-3 h-3 pointer-events-none stroke-slate-900 stroke-2\\" viewBox=\\"0 0 14 14\\" style=\\"\\">
      <path d=\\"M0.5 8.5498L3.23 12.0598C3.32212 12.1795 3.44016 12.2768 3.57525 12.3443C3.71034 12.4119 3.85898 12.4479 4.01 12.4498C4.15859 12.4515 4.3057 12.4201 4.44063 12.3578C4.57555 12.2956 4.6949 12.204 4.79 12.0898L13.5 1.5498\\" fill=\\"none\\"></path>
    </svg></div>
  <div class=\\"flex w-fit\\"></div>
</div>"
`;

exports[`CheckBox > renders correctly when not checked 1`] = `
"<div class=\\"flex p-0 gap-3 items-top\\">
  <div class=\\"shadow-sm w-5 h-5 rounded border flex justify-center items-center mt-[3px] border-slate-400\\"><input type=\\"checkbox\\" class=\\"opacity-0 absolute\\"><svg class=\\"w-3 h-3 pointer-events-none stroke-slate-900 stroke-2\\" viewBox=\\"0 0 14 14\\" style=\\"display: none;\\">
      <path d=\\"M0.5 8.5498L3.23 12.0598C3.32212 12.1795 3.44016 12.2768 3.57525 12.3443C3.71034 12.4119 3.85898 12.4479 4.01 12.4498C4.15859 12.4515 4.3057 12.4201 4.44063 12.3578C4.57555 12.2956 4.6949 12.204 4.79 12.0898L13.5 1.5498\\" fill=\\"none\\"></path>
    </svg></div>
  <div class=\\"flex w-fit\\"></div>
</div>"
`;
